2006-11-01  Reinout van Rees  <reinout@zestsoftware.nl>

	* ArchetypesGenerator.py: Added support for argouml's plain xmi
	format suffix: .uml (patch by Erik Rose: thanks!)

2006-09-01  Godefroid Chapelle <gotcha@bubblenet.be>

	* url TGV on transition, setup action url, use PloneWorkflowTransitions to see it in Plone

2006-06-29  Godefroid Chapelle <gotcha@bubblenet.be> - Gauthier Bastien <gbastien@commune.sambreville.be>

	* fix imports tagged value for packages

2006-06-29  Godefroid Chapelle <gotcha@bubblenet.be> - Gauthier Bastien <gbastien@commune.sambreville.be>

	* new zope_class stereotype for classes; will generate a Python class plus security imports,
        security declarations on methods and security initialization. Refactored security computation from
        ArchetypesGenerator to BaseGenerator

2006-06-29  Reinout van Rees  <reinout@vanrees.org>

	* ChangeLog: Started the changelog.
